# ternfs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  ci.py  common.py  deploy.py  integration.py  tests.py  tests.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-eggsfs.yml  build-kmod.yaml  main.yml
c/: eggs_msgs.h
cpp/: .gitignore  AssertiveLock.hpp  BacktraceSafe.cpp  BinaryFormatter.hpp  Bincode.cpp  Bincode.hpp  CDC.cpp  CDC.hpp  CDCDB.cpp  CDCDB.hpp  CDCDBData.hpp  CDCKey.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Crypto.cpp  Crypto.hpp  Dockerfile  Dockerfile-alpine  Dockerfile-ubuntu  Env.cpp  Env.hpp  Exception.cpp  Makefile  Msgs.cpp  Msgs.hpp  MsgsGen.cpp  MsgsGen.hpp  RocksDBUtils.cpp  RocksDBUtils.hpp  SBRMUnix.hpp  ScopeGuard.hpp  Shard.cpp  Shard.hpp  ShardDB.cpp  ShardDB.hpp  ShardDBData.cpp  ShardDBData.hpp  Shuckle.cpp  Shuckle.hpp  (+15 more)
cpp/cdc/: CDC.cpp  CDC.hpp  CDCDB.cpp  CDCDB.hpp  CDCDBData.hpp  CMakeLists.txt  eggscdc.cpp  terncdc.cpp
cpp/core/: Assert.hpp  AssertiveLock.hpp  Backtrace.hpp  BacktraceSafe.cpp  BinaryFormatter.hpp  Bincode.cpp  Bincode.hpp  CDCKey.hpp  CMakeLists.txt  Common.cpp  Common.hpp  CommonOptions.cpp  CommonOptions.hpp  Connect.cpp  Connect.hpp  Crypto.cpp  Crypto.hpp  Env.cpp  Env.hpp  ErrorCount.cpp  ErrorCount.hpp  Exception.cpp  Exception.hpp  FormatTuple.cpp  FormatTuple.hpp  LogsDB.cpp  LogsDB.hpp  LogsDBData.hpp  Loop.cpp  Loop.hpp  Metrics.cpp  Metrics.hpp  Msgs.cpp  Msgs.hpp  MsgsGen.cpp  MsgsGen.hpp  MultiplexedChannel.hpp  PeriodicLoop.hpp  Protocol.hpp  Random.cpp  (+30 more)
cpp/crc32c/: CMakeLists.txt  crc32c.c  crc32c.cpp  crc32c.h  crc32c.py  crc32c_body.c  crc32c_pclmul.c  iscsi.h  iscsi.hpp  tables.cpp  tests.cpp
cpp/dbtools/: CDCDBTools.cpp  CDCDBTools.hpp  CMakeLists.txt  LogsDBTools.cpp  LogsDBTools.hpp  ShardDBTools.cpp  ShardDBTools.hpp  eggsdbtools.cpp  terndbtools.cpp
cpp/ktools/: CMakeLists.txt  eggsktools.cpp  ternktools.cpp
cpp/registry/: CMakeLists.txt  Registerer.cpp  Registerer.hpp  Registry.cpp  Registry.hpp  RegistryCommon.hpp  RegistryDB.cpp  RegistryDB.hpp  RegistryDBData.hpp  RegistryKey.hpp  RegistryServer.cpp  RegistryServer.hpp  RegistryState.hpp  ternregistry.cpp
cpp/rs/: CMakeLists.txt  bench.cpp  gf.hpp  gf_tables.c  gf_tables.cpp  gf_tables.py  rs.cpp  rs.h  rs_core.c  tests.cpp
cpp/shard/: BlockServicesCacheDB.cpp  BlockServicesCacheDB.hpp  CMakeLists.txt  Shard.cpp  Shard.hpp  ShardDB.cpp  ShardDB.hpp  ShardDBData.cpp  ShardDBData.hpp  ShardKey.hpp  eggsshard.cpp  ternshard.cpp
cpp/tests/: CMakeLists.txt  doctest.h  logsdbtests.cpp  registrydbtests.cpp  tests.cpp
cpp/tests/utils/: TempLogsDB.hpp  TempRegistryDB.hpp
cpp/wyhash/: wyhash.h
docs/: alerts.md  disk-failure.md  gc.md  kmod-file-tracking.md  parity.md
go/: .gitignore  Makefile  build.py  go.mod  go.sum
go/alerts/: alerter.go
go/assert/: assert.go
go/badblocks/: badblocks.go
go/bincode/: bincode.go  bincode_test.go
go/bincodegen/: FetchedFullSpan.hpp  FetchedSpan.hpp  FetchedSpan.hpp.license  bincodegen.go  main.go  msgs_bincode.go.header
go/blockservice/: blockservice.go
go/cbcmac/: cbcmac.go  cbcmac_test.go
go/cdckey/: cdckey.go
go/certificate/: blockscert.go
go/cleanup/: collectdirectories.go  defrag.go  destructfiles.go  migrate.go  policy.go  policy_test.go  scratch.go  scrub.go  zeroblockservicefiles.go
go/cli/: cli.go
go/client/: blockpath.go  blockscert.go  blocksconn_test.go  blocksreq.go  cdcreq.go  client.go  collectdirectories.go  destructfiles.go  dirinfocache.go  dirinfocache_test.go  metadatareq.go  migrate.go  parwalk.go  policy.go  policy_test.go  registryreq.go  scratch.go  scrub.go  shardreq.go  shucklereq.go  span.go  span_test.go  waitregistry.go  waitshuckle.go  zeroblockservicefiles.go
go/closetracker/: .gitignore  closetracker.bpf.c
go/common/: common.go  errcode_string.go
go/crc32c/: crc32c.go  crc32c_test.go
go/crc32csum/: crc32csum.go
go/divide32/: divide32.go
go/eggs/: blockservicereq.go  buildshard.go  cbcmac.go  cbcmac_test.go  cdckey.go  cdcreq.go  client.go  crc32.go  dirinfocache.go  env.go  gc.go  loglevels.go  managedprocess.go  migrate.go  mockableblockservice.go  policy.go  policy_test.go  shard_test.go  shardreq.go  shucklereq.go  storageclass.go  timings.go  utils.go  waitshuckle.go
go/eggsblocks/: eggsblocks.go
go/eggsblockservice/: eggsblockservice.go
go/eggscli/: eggscli.go  kernelmetrics.go  parwalk.go
go/eggsfuse/: eggsfuse.go
go/eggsgc/: eggsgc.go
go/eggsrun/: eggsrun.go
go/eggss3/: eggss3.go
go/eggsshuckle/: base.html  directory.html  eggsshuckle.go  file.html  index.html  preact-10.18.1.module.js  scripts.js  stats.html  transient.html
go/eggsshucklebeacon/: eggsshucklebeacon.go
go/eggsshuckleproxy/: eggsshuckleproxy.go
go/eggstests/: cleanup.go  dirseek.go  eggstests.go  filehistory.go  fstest.go  integrationtest.go  paralleldirs.go  preaddir.go  req.go  rsynctest.go
kmod/: .gitignore  BUILD.md  Makefile  bincode.c  bincode.h  bincode_tests.c  bincodegen.c  bincodegen.h  block.c  block.h  block_services.c  block_services.h  build.sh  build_deb.sh  ci.sh  ci_prepare.sh  common.h  config-kasan  config-kasan-5.4.237  config-kasan-6.12.49  config-lockdep  config-vanilla  counter.h  crc.c  crc.h  crc32c.c  crc_fpu.c  createimg.sh  debugfs.c  debugfs.h  dentry.c  dentry.h  dir.c  dir.h  err.c  err.h  export.c  export.h  fetchlinux.sh  file.c  (+51 more)
pyeggsfs/: .gitignore  README.md  basic_client.py  bincode.py  block_service.py  cdc.py  cdc_key.py  cdc_msgs.py  common.py  crc32c.py  cross_dir_coord.py  cross_dir_key.py  cross_dir_msgs.py  crypto.py  eggs.py  eggsfuse.py  metadata_msgs.py  metadata_utils.py  mypy.ini  raftless_metadata.py  shard.py  shard_msgs.py  shuckle.py  sortedcontainers.pyi  tests.py
python/: basic_client.py  bincode.py  block_service.py  cdc.py  cdc_msgs.py  common.py  crc32c.py  crypto.py  eggsfuse.py  error.py  msgs.py  pyeggsfs.py  shard.py  shard_msgs.py  shuckle.py
scripts/: startblockservice.py
src/: hex.rs  metadata_msgs.rs  schema.rs
(+161 files in other folders)
