[package]
name = "eggsfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { version = "0.18.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
